add feature flash card
